# DTPToys

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sbt  conanfile.txt
cmake/: FindWayland.cmake  FindWaylandClient.cmake
experiments/: CMakeLists.txt
experiments/src/: main.cc
oldscala/main/scala/com/tdg/dtp/utils/: PaperSizes.scala  Rope.scala
src/: .gitignore  CMakeLists.txt  WaylandXdgWmBase.cpp  gc_logging_utils.h  main.cpp  wayland_compositor.cpp  wayland_compositor.h  wayland_display.cpp  wayland_display.h  wayland_registry.cpp  wayland_registry.h  wayland_seat.cpp  wayland_seat.h  wayland_shm.cpp  wayland_shm.h  wayland_utils.cpp  wayland_utils.h  wayland_xdg_wm_base.cpp  wayland_xdg_wm_base.h  window.cpp  window.h
src/AK/: SharedBuffer.h
src/LibCore/: Event.h  EventLoop.cpp  Object.cpp
src/LibGUI/: Application.cpp  Clipboard.cpp  Desktop.cpp  Menu.cpp  MenuBar.cpp  MenuItem.cpp  Widget.cpp  Window.cpp
src/LibGfx/: Bitmap.cpp  Font.cpp
src/dtp/: main.cc
src/main/scala/: Rope.scala
src/main/scala/com/tdg/dtp/utils/: PaperSizes.scala
src/test/scala/: RopeTest.scala
src/test/scala/com/tdg/dtp/utils/: RopeTest.scala
wilde/: CMakeLists.txt  WaylandManager.cc  WaylandManager.h  build.sh  fontinformation.cc  fontinformation.h  globalutils.h  main.cc  systemdetails.cc  systemdetails.h
